removed subjects collection from project
