# swagger.json
@@ -322,154 +322,6 @@
           }
         }
       }
-    },
-    "/subjects/": {
-      "get": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "subject": {
-                  "example": "any"
-                },
-                "time": {
-                  "example": "any"
-                },
-                "mirrorless": {
-                  "example": "any"
-                },
-                "sensor": {
-                  "example": "any"
-                },
-                "environment": {
-                  "example": "any"
-                },
-                "duration": {
-                  "example": "any"
-                },
-                "speed": {
-                  "example": "any"
-                },
-                "view": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/subjects/{id}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "put": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "subject": {
-                  "example": "any"
-                },
-                "time": {
-                  "example": "any"
-                },
-                "mirrorless": {
-                  "example": "any"
-                },
-                "sensor": {
-                  "example": "any"
-                },
-                "environment": {
-                  "example": "any"
-                },
-                "duration": {
-                  "example": "any"
-                },
-                "speed": {
-                  "example": "any"
-                },
-                "view": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
     }
   }
 }
